<resources>
    <string name="_100_round">100 Round</string>
    <string name="_14days">14days</string>
    <string name="_1_diamond_1_rs">(1 Diamond = 1 RS)</string>
    <string name="_1_enter_your_phone_number">1. Enter your Phone number</string>
    <string name="_1_please_make_sure_that_upi_address_has_at_least_one_transaction_otherwise_the_authorization_will_fail">1. Please make sure that UPI address has at least one transaction, otherwise the authorization will fail.</string>
    <string name="_200_round">200 Round</string>
    <string name="_24_7_customer_service">24/7 Customer service</string>
    <string name="_2_enter_the_obtained_otp">2.Enter the Pin code you set previously”</string>
    <string name="_2_enter_the_pin_code_you_set_previously">2. Enter the “Pin” code you set previously</string>
    <string name="_2_please_add_the_upi_address_activated_in_wallet_app_if_the_upi_address_is_wrong_you_will_not_be_able_to_withdraw_funds">2. Please add the UPI address activated in wallet app. If the UPI address is wrong, you will not be able to withdraw funds.</string>
    <string name="_3_click_the_next_button_to_continue">3. Click the “Next” button to continue.</string>
    <string name="_3days">3days</string>
    <string name="_3digits">3Digits</string>
    <string name="_3digits_game">3 Digits Game</string>
    <string name="_50_round">50 Round</string>
    <string name="_5_digits_game">5 Digits Game</string>
    <string name="_600_round">600 Round</string>
    <string name="_6_digits">6 digits</string>
    <string name="_7days">7days</string>
    <string name="_9_17_number_no_space">9-17 number, no space</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_us">About Us</string>
    <string name="aboutlongstr">"BT Lottery, part of the BT Group, offers a wide range of lottery and electronic entertainment games as well as payments and social networking services. The BT Group has nearly 20 brands and more than 80 million members in more than 300 cities around the world and is expanding in India, the Middle East, Southeast Asia, Europe and Africa. Security, flexibility and global appeal are its hallmarks.


 At present, it is mainly concentrated on the BT lottery platform, focusing on scratches, Kerala lottery, three-digit games, color prediction, dice games, fishing games, live baccarat, casino games, etc. Settled in Indian rupees, players can earn rewards through games and draws. Scratch-off tickets offer unique gameplay and rewards, with a top prize of 250,000 times your stake. Other highlights include various prize pools, limited-time games, casino experiences, live baccarat, diverse fishing games and a range of three-digit lottery options. Double Color Ball prediction and craps games offer multiple time frames and bonus possibilities."</string>
    <string name="account">Account</string>
    <string name="account2">Account :</string>
    <string name="account_holder_s_name">"Account Holder's name"</string>
    <string name="account_number">Account Number</string>
    <string name="account_number_again">Account Number Again</string>
    <string name="activity">Activity</string>
    <string name="activity_time">Activity time:</string>
    <string name="actual_amount">Actual Amount</string>
    <string name="actual_amount_received">Actual amount received:</string>
    <string name="add">Add</string>
    <string name="add_bank_card">Add bank card</string>
    <string name="add_new_tool">Add New Tool</string>
    <string name="add_your_times">How to get times?</string>
    <string name="after_amount">After amount</string>
    <string name="again_exit_app">Press again to exit the App</string>
    <string name="agent">Agent</string>
    <string name="agent_level">Agent Level</string>
    <string name="agent_teams">Agent Teams</string>
    <string name="agentweb_camera">Camera</string>
    <string name="agentweb_cancel">Cancel</string>
    <string name="agentweb_click_open">Click to Open</string>
    <string name="agentweb_coming_soon_download">File download will start soon</string>
    <string name="agentweb_continue">OK</string>
    <string name="agentweb_current_downloaded_length">Downloaded: %s</string>
    <string name="agentweb_current_downloading_progress">Progress: %s</string>
    <string name="agentweb_default_page_error">Oops! Error occurred. Tap here to refresh ~</string>
    <string name="agentweb_download">Download</string>
    <string name="agentweb_download_fail">Download failed!</string>
    <string name="agentweb_download_task_has_been_exist">Task already exists, please do not repeat clicking on download!</string>
    <string name="agentweb_file_chooser">File</string>
    <string name="agentweb_file_download">File Download</string>
    <string name="agentweb_honeycomblow">You are using mobile data. Continue downloading this file?</string>
    <string name="agentweb_leave">Leave</string>
    <string name="agentweb_leave_app_and_go_other_page">Do you want to leave %s and go to another app?</string>
    <string name="agentweb_loading">Loading…</string>
    <string name="agentweb_max_file_length_limit">Selected file cannot exceed %sMB</string>
    <string name="agentweb_message_show_continue">Are you sure you want to visit this webpage?</string>
    <string name="agentweb_message_show_ssl_error">SSL Authentication Error,</string>
    <string name="agentweb_message_show_ssl_expired">Certificate has expired,</string>
    <string name="agentweb_message_show_ssl_hostname_mismatch">Certificate hostname mismatch,</string>
    <string name="agentweb_message_show_ssl_not_yet_valid">Certificate not yet valid,</string>
    <string name="agentweb_message_show_ssl_untrusted">Certificate issuer not trusted,</string>
    <string name="agentweb_tips">Tips</string>
    <string name="agentweb_title_ssl_error">SSL Authentication Error</string>
    <string name="agentweb_trickter">You have a new notification</string>
    <string name="akshaya">AKSHAYA</string>
    <string name="alert">Alert</string>
    <string name="all">All</string>
    <string name="allocation_quota">Allocation Quota</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="amount">Amount</string>
    <string name="amount2">Amount :</string>
    <string name="analyze">Analyze</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">999Pay</string>
    <string name="app_version">App Version</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="are_you_sure_to_clear_all_numbers">Are you sure to clear all numbers?</string>
    <string name="are_you_sure_you_want_to_join_the_game">Are you sure you want to join the game?</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to log out？</string>
    <string name="arrival_time">Arrival time</string>
    <string name="at_least_1_number_s">at least 1 number(s)</string>
    <string name="attention">Attention :</string>
    <string name="authorize">Authorize</string>
    <string name="authorize_freecharge">Authorize FreeCharge</string>
    <string name="authorizing">Authorizing</string>
    <string name="auto_play">Auto Play</string>
    <string name="auto_reviewing">Auto-Reviewing…</string>
    <string name="available">Available</string>
    <string name="available_normal_n_pause_suspend_authorization_n_please_re_link_n_authorizing_waiting_for_third_party_authorization_n_pending_to_be_determined_please_contact_customer_service_for_long_term_pending_decisions_n_unavailable_please_contact_customerservice_if_disabled_for_a_long_time">"Available: normal 
 Pause: Suspend authorization.
 please re-link
 Authorizing: waiting for third-party authorization
 Pending: To be determined. Please contact customer service for long-term pending decisions.
 Unavailable: please contact customerservice if disabled for a long time."</string>
    <string name="award_records">Award records</string>
    <string name="balance">Balance</string>
    <string name="bank">Bank</string>
    <string name="bank_card">Bank card</string>
    <string name="bank_name2">Bank name :</string>
    <string name="banner_adapter_null_error">Adapter is NULL!</string>
    <string name="before_obtaining_the_otp_please_make_sure_you_have_installed_the_freecharge_app_on_your_phone_same_phone_number">Before obtaining the “OTP”, please make sure you have installed the “FreeCharge” app on your phone (same phone number).</string>
    <string name="before_obtaining_the_otp_please_make_sure_you_have_installed_the_mobikwik_app_on_your_phone_same_phone_number">Before obtaining the “OTP”, please make sure you have installed the “Mobikwik” app on your phone (same phone number).</string>
    <string name="before_obtaining_the_otp_please_make_sure_you_have_installed_the_paytm_app_on_your_phone_same_phone_number">Before obtaining the “OTP”, please make sure you have installed the “Paytm” app on your phone (same phone number).</string>
    <string name="before_obtaining_the_otp_please_make_sure_you_have_installed_the_phonepe_app_on_your_phone_same_phone_number">Before obtaining the “OTP”, please make sure you have installed the “PhonePe” app on your phone (same phone number).</string>
    <string name="beginner_s_guide">Beginner’s Guide</string>
    <string name="beneficiary_name">Beneficiary name</string>
    <string name="beneficiary_name2">Beneficiary name :</string>
    <string name="cancel">Cancel</string>
    <string name="close_withdraw">Close Withdraw?</string>
    <string name="confirm">Confirm</string>
    <string name="deposit">Deposit</string>
    <string name="go">Go</string>
    <string name="max">MAX</string>
    <string name="min">Min</string>
    <string name="refresh_list">Refresh list</string>
    <string name="reset">Reset</string>
    <string name="select_date">Select date</string>
    <string name="select_sorting_method">Select sorting method</string>
    <string name="sorting">Sorting</string>
    <string name="tips">Tips</string>
    <string name="tool_expiration_reminder">Tool expiration reminder</string>
</resources>