<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:orientation="vertical"
    android:id="@id/bigLin"
    android:background="@color/CoF2F5FA"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:id="@id/fromView"
        android:background="@drawable/bgdp10_de"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp8"
        android:layout_marginTop="@dimen/dp18"
        android:layout_marginRight="@dimen/dp8"
        android:paddingStart="@dimen/dp15"
        android:paddingEnd="@dimen/dp6">
        <TextView
            android:textSize="@dimen/sp15"
            android:textStyle="bold"
            android:textColor="#ff010101"
            android:textColorHint="#ff848484"
            android:id="@id/changeTxt"
            android:paddingTop="@dimen/dp13"
            android:paddingBottom="@dimen/dp13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/select_sorting_method" />
        <ImageView
            android:layout_width="@dimen/dp18"
            android:layout_height="@dimen/dp18"
            android:src="@mipmap/right_black"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>
    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:id="@id/aView"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dp40"
        android:layout_marginLeft="@dimen/dp8"
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginRight="@dimen/dp8"
        android:layout_marginBottom="@dimen/dp7"
        android:layout_below="@id/fromView">
        <EditText
            android:textSize="@dimen/sp15"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:gravity="center"
            android:id="@id/minET"
            android:background="@drawable/bgdp10_deb"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:hint="@string/min"
            android:singleLine="true"
            android:maxLength="10"
            android:layout_weight="1.0"
            android:layout_centerVertical="true"
            android:inputType="number"
            android:textCursorDrawable="@drawable/bgcursor" />
        <View
            android:background="@color/black"
            android:layout_width="@dimen/dp15"
            android:layout_height="@dimen/dp2"
            android:layout_marginLeft="@dimen/dp10"
            android:layout_marginRight="@dimen/dp10" />
        <EditText
            android:textSize="@dimen/sp15"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:gravity="center"
            android:id="@id/maxET"
            android:background="@drawable/bgdp10_deb"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:hint="@string/max"
            android:singleLine="true"
            android:maxLength="10"
            android:layout_weight="1.0"
            android:layout_centerVertical="true"
            android:inputType="number"
            android:textCursorDrawable="@drawable/bgcursor"
            android:layout_marginEnd="@dimen/dp13" />
        <TextView
            android:textSize="@dimen/sp15"
            android:textStyle="bold"
            android:textColor="#ffffffff"
            android:gravity="center"
            android:id="@id/goTxt"
            android:background="@drawable/bgdp10_g"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:text="@string/go"
            android:layout_weight="1.0"
            android:layout_marginEnd="@dimen/dp12" />
        <TextView
            android:textSize="@dimen/sp15"
            android:textStyle="bold"
            android:textColor="#ffffffff"
            android:gravity="center"
            android:id="@id/resetTxt"
            android:background="@drawable/bgdp10_g"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:text="@string/reset"
            android:layout_weight="1.0" />
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:id="@id/sortView"
            android:visibility="gone"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:layout_marginStart="@dimen/dp15">
            <ImageView
                android:layout_width="@dimen/dp32"
                android:layout_height="@dimen/dp32"
                android:src="@mipmap/sort_img" />
            <TextView
                android:textSize="@dimen/sp12"
                android:textStyle="bold"
                android:textColor="@color/CoMainA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sorting" />
        </LinearLayout>
    </LinearLayout>
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@id/m_refresh"
        android:paddingLeft="@dimen/dp8"
        android:paddingRight="@dimen/dp8"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/aView">
        <androidx.recyclerview.widget.RecyclerView
            android:orientation="vertical"
            android:id="@id/rv_r_keralabig"
            android:paddingTop="@dimen/dp7"
            android:paddingBottom="@dimen/dp100"
            android:clipToPadding="false"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    <ImageView
        android:id="@id/topImg"
        android:visibility="gone"
        android:layout_width="@dimen/dp56"
        android:layout_height="@dimen/dp56"
        android:layout_marginBottom="@dimen/dp140"
        android:src="@mipmap/topimg"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="@dimen/dp8"
        android:layout_alignParentEnd="true" />
    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:id="@id/refView"
        android:background="@drawable/bgdp29jianbian"
        android:paddingLeft="@dimen/dp44"
        android:paddingTop="@dimen/dp14"
        android:paddingRight="@dimen/dp44"
        android:paddingBottom="@dimen/dp14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp80"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">
        <ImageView
            android:layout_width="@dimen/dp20"
            android:layout_height="@dimen/dp20"
            android:src="@mipmap/ref_white"
            android:layout_marginEnd="@dimen/dp11" />
        <TextView
            android:textSize="@dimen/sp16"
            android:textStyle="bold"
            android:textColor="#ffffffff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/refresh_list" />
    </LinearLayout>
</RelativeLayout>