<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minHeight="@dimen/dp200"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dp45"
        android:paddingEnd="@dimen/dp16">
        <View
            android:background="#ffaaaaaa"
            android:layout_width="fill_parent"
            android:layout_height="0.5dip" />
        <TextView
            android:textSize="@dimen/sp16"
            android:textColor="#ffbfbfbf"
            android:id="@id/cancelTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dp16"
            android:layout_alignParentStart="true" />
        <TextView
            android:textSize="@dimen/sp16"
            android:textStyle="bold"
            android:textColor="#ff333333"
            android:gravity="center"
            android:id="@id/titleTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_date"
            android:lines="1"
            android:layout_toLeftOf="@id/tv_finish"
            android:layout_toRightOf="@id/cancelTxt"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/dp10"
            android:layout_marginEnd="@dimen/dp10" />
        <TextView
            android:textSize="@dimen/sp16"
            android:textStyle="bold"
            android:textColor="@color/CoMainA"
            android:id="@id/tv_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true" />
        <View
            android:background="#ffaaaaaa"
            android:layout_width="fill_parent"
            android:layout_height="0.5dip" />
    </RelativeLayout>
    <View
        android:background="#ffeeeeee"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dp1" />
    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:id="@id/optionspicker"
        android:background="@android:color/white"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/dp150">
        <com.contrarywind.view.WheelView
            android:id="@id/options1"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0" />
        <com.contrarywind.view.WheelView
            android:id="@id/options2"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0" />
        <com.contrarywind.view.WheelView
            android:id="@id/options3"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>